@@ -1,3 +1,4 @@
+- Added new public property LastDragEffect which supplies the last executed drag effect.
 - Fixed issue #206: Column painting issue with coWrapCaption in Options
 - Fixed issue #336 by ignoring PARENTDOUBLEBUFFEREDCHANGED message.
 - Fixed issue #342 by adding a new implementation of the VCL's DoubleBuffered property.
